* buddies: #2489 done: removed BuddiesModel and BuddiesModelBase classes (Vogel)
* chat styles: #2499 fixed: keep message borders for long content (ultr)
* jabber: #2141 done: MUC support added (Vogel)
* sms: #359 done: more detailed process of sending SMS with possibility of cancelation in any moment (Vogel)
* sms: 2466 fixed: messages from JavaScript are now translatable (Vogel)

+++ version 0.12.0-alpha3
* core: configuration file renamed to kadu-0.12.conf.xml as format will be changed (Vogel)
* encryption_ng: #2505 done: removed "Encrypt by default" option, it is now always set to true (Vogel)
* gui: #2122 fixed: do not move contact to the end of list when changing its account in Buddy Data Window (Vogel)
* gui: #370 fixed: do not display emoticons in middle of word (Vogel)
* gui: #598 fixed: added icons preview to Configuration Window (Vogel)
* configuration: #2496 done: support custom icons for plugins in configuration sections (beevvy)
* gui: new and improved plugins configuration window (Juzef)

+++ version 0.12.0-alpha2
* gui: #2153 done: new and improved window for changing account status and description (Juzef)
* history: #2440 done: auto-recovery for corrupted history databases (Vogel)
* history: #2365 done: history can be disabled per chat and per buddy (Vogel)

+++ version 0.12.0-alpha1
* history: #2450 done, #2300 fixed: new, polished history window (Vogel)
* history: #2415 done: per-contact history (Vogel)
* gui: #2277 fixed: status subscription window has proper meaning (Juzef)
* gui: #2452 fixed: contact added via subscription window is saved by Add Buddy window, not magically before (Juzef)
* jabber: redesigned SSL certificate error dialog (Juzef)
* jabber: do not ask user for removing contact which revoked status subscription (Juzef)
* gui: #2454 fixed: fix memory leak in emoticons selector (Juzef)
* gui: #2458 done: added search bar to chat widgets and history window (Vogel)